fix: stop joining virtual threads to main thread to prevent freezes